# arxiv-RAG

./: .dockerignore  .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
api/: Dockerfile  main.py
arxiv_rag/: chunk.py  cli.py  config.py  generate.py  ingest.py
docs/: architecture.md
evals/: README.md
infra/: docker-compose.yml
notebooks/: README.md
tests/unit/: test_smoke.py
