[project]
name = "arxiv-rag"
version = "0.1.0"
description = "RAG over arXiv papers with citation-backed answers."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [{ name = "Allison Zhao" }]
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pymupdf>=1.27.2.3",
    "typer>=0.12",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[project.scripts]
arxiv-rag = "arxiv_rag.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["arxiv_rag"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.flake8-bugbear]
# Typer / FastAPI idiomatically use these as default arguments.
extend-immutable-calls = ["typer.Argument", "typer.Option", "fastapi.Depends", "fastapi.Query"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
